test/1.4/errors/T_ESWITCH.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;
device test;

method init() {
    switch (1)
        // must start with a case
        /// ERROR ESWITCH
    {
    }
    switch (1) {
    default:
    #if (true) {
        /// ERROR ESWITCH
    case 1:
    }
    }
    switch (1) {
    default:
    #if (true) {
        /// ERROR ESWITCH
    default:
    }
    }

    // OK
    switch (1) {
    #if (true) {
    default:
    } #else {
    default:
    }
    }
}
